Fix Java 11 compatibility in symbol filtering streams